# model-language

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  RELEASING.md  SECURITY.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml  wasm.yml
bench/: RESULTS.md  engine.bench.ts
conformance/: README.md
conformance/cases/: arithmetic.json  calculate.json  comment.json  conditional-array-contains.json  conditional-exists-null.json  conditional-in.json  conditional-logic.json  conditional-whitespace.json  datetime-days-ago.json  directive-priority.json  edge-arith-non-number.json  edge-deeply-nested-if.json  edge-div-by-zero.json  edge-empty-array-else.json  edge-empty-template.json  edge-filter-wrong-type-passthrough.json  edge-include-cycle.json  edge-loop-item-in-if.json  edge-missing-field.json  edge-nested-loops.json  edge-null-in-loop.json  edge-object-interpolation.json  edge-unicode.json  edge-unknown-filter-passthrough.json  filter-capitalize.json  filter-currency.json  include.json  interpolation-array.json  interpolation-default-null.json  interpolation-literal.json  loop-basic.json  (+15 more)
docs/: README.md  api.md  conditionals.md  diagnostics.md  directives.md  functions.md  getting-started.md  loops.md  performance.md  portability.md  variables.md
examples/: README.md  basic.ts  greeting.mlt  lead-qualification.md  order-status.mlt  run.ts  welcome.md  welcome.mlt
hosts/: README.md
hosts/python/: README.md  pyproject.toml
hosts/python/model_language/: __init__.py
hosts/python/tests/: test_bridge_errors.py  test_conformance.py
hosts/rust/: Cargo.toml  README.md
hosts/rust/src/: lib.rs
hosts/rust/tests/: conformance.rs
python/: README.md  pyproject.toml
src/: engine.ts  index.ts  types.ts
test/: diagnostics.test.ts  engine.test.ts  lexer.test.ts  parser.test.ts  registries.test.ts  render.test.ts  smoke.test.ts  typecheck.test.ts
wasm/: README.md  build.mjs  entry.ts
(+120 files in other folders)
